products-detail page

--- a/dostavka.html
+++ b/dostavka.html
@@ -59,9 +59,9 @@
                 <li class="sidebar_li"><a href="products.html">ПРОДУКЦИЯ</a></li>
                 <li class="sidebar_li"><a href="uslugi.html">УСЛУГИ</a></li>
                 <li class="sidebar_li sidebar_li_act"><a href="dostavka.html">ДОСТАВКА</a></li>
-                <li class="sidebar_li"><a href="">ПРОИЗВОДСТВО</a></li>
+                <li class="sidebar_li"><a href="proizvodstvo.html">ПРОИЗВОДСТВО</a></li>
                 <li class="sidebar_li"><a href="info.html">ИНФОРМАЦИЯ</a></li>
-                <li class="sidebar_li"><a href="">КОНТАКТЫ</a></li>
+                <li class="sidebar_li"><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
             <a href="#header" class="arrow_up"><img src="./img/arrow-up.svg" alt=""></a>
         </div>
@@ -88,9 +88,9 @@
             <li class="menu_adaptive_li"><a href="products.html">Продукция</a></li>
             <li class="menu_adaptive_li"><a href="uslugi.html">Услуги</a></li>
             <li class="menu_adaptive_li"><a href="dostavka.html">Доставка</a></li>
-            <li class="menu_adaptive_li"><a href="">Производство</a></li>
+            <li class="menu_adaptive_li"><a href="proizvodstvo.html">Производство</a></li>
             <li class="menu_adaptive_li"><a href="info.html">Информация</a></li>
-            <li class="menu_adaptive_li"><a href="">Контакты</a></li>
+            <li class="menu_adaptive_li"><a href="contacts.html">Контакты</a></li>
         </ul>
     </section>
     <!-- Выпадающее меню справа -->
@@ -115,13 +115,13 @@
                     <a href="dostavka.html" class="main_lev">ДОСТАВКА</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">ПРОИЗВОДСТВО</a>
+                    <a href="proizvodstvo.html" class="main_lev">ПРОИЗВОДСТВО</a>
                 </li>
                 <li class="menu_item">
                     <a href="info.html" class="main_lev">ИНФОРМАЦИЯ</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">КОНТАКТЫ</a>
+                    <a href="contacts.html" class="main_lev">КОНТАКТЫ</a>
                 </li>
             </ul>
     </nav>
