--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 <li class="sidebar_li"><a href="products.html">ПРОДУКЦИЯ</a></li>
                 <li class="sidebar_li"><a href="uslugi.html">УСЛУГИ</a></li>
                 <li class="sidebar_li"><a href="dostavka.html">ДОСТАВКА</a></li>
-                <li class="sidebar_li"><a href="">ПРОИЗВОДСТВО</a></li>
+                <li class="sidebar_li"><a href="proizvodstvo.html">ПРОИЗВОДСТВО</a></li>
                 <li class="sidebar_li"><a href="info.html">ИНФОРМАЦИЯ</a></li>
-                <li class="sidebar_li"><a href="">КОНТАКТЫ</a></li>
+                <li class="sidebar_li"><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
             <a href="#header" class="arrow_up"><img src="./img/arrow-up.svg" alt=""></a>
         </div>
@@ -90,9 +90,9 @@
                 <li class="menu_adaptive_li"><a href="products.html">Продукция</a></li>
                 <li class="menu_adaptive_li"><a href="uslugi.html">Услуги</a></li>
                 <li class="menu_adaptive_li"><a href="dostavka.html">Доставка</a></li>
-                <li class="menu_adaptive_li"><a href="">Производство</a></li>
+                <li class="menu_adaptive_li"><a href="proizvodstvo.html">Производство</a></li>
                 <li class="menu_adaptive_li"><a href="info.html">Информация</a></li>
-                <li class="menu_adaptive_li"><a href="">Контакты</a></li>
+                <li class="menu_adaptive_li"><a href="contacts.html">Контакты</a></li>
             </ul>
     </section>
     <!-- Выпадающее меню справа -->
@@ -117,13 +117,13 @@
                     <a href="dostavka.html" class="main_lev">ДОСТАВКА</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">ПРОИЗВОДСТВО</a>
+                    <a href="proizvodstvo.html" class="main_lev">ПРОИЗВОДСТВО</a>
                 </li>
                 <li class="menu_item">
                     <a href="info.html" class="main_lev">ИНФОРМАЦИЯ</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">КОНТАКТЫ</a>
+                    <a href="contacts.html" class="main_lev">КОНТАКТЫ</a>
                 </li>
             </ul>
     </nav>
@@ -248,66 +248,66 @@
                     <h2>Спецпредложения</h2>
                     <div class="swiper swiper_my">
                         <div class="cards_wrap swiper-wrapper">
-                            <div class="cards swiper-slide">
-                                <div class="cards_desc">
-                                    <img src="./img/spec-offers.png" alt="">
-                                    <h4>Втулка</h4>
-                                    <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
+                                <div class="cards swiper-slide">
+                                    <a href="products-detail.html"><div class="cards_desc">
+                                        <img src="./img/spec-offers.png" alt="">
+                                        <h4>Втулка</h4>
+                                        <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
+                                    </div></a>
+                                    <div class="cards_price">
+                                        <span>1 900,65 Р</span>
+                                        <p class="price">1 200,25 Р</p>
+                                        <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
+                                    </div>
+                                </div></a>
+                                <div class="cards swiper-slide">
+                                    <a href="products-detail.html"><div class="cards_desc">
+                                        <img src="./img/spec-offers.png" alt="">
+                                        <h4>Цилиндр включения жалюзи</h4>
+                                        <p>ТГМ4.10.46.000 ТГМ4.10.46.000</p>
+                                    </div></a>
+                                    <div class="cards_price">
+                                        <span>7 900,65 Р</span>
+                                        <p class="price">2 200,25 Р</p>
+                                        <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
+                                    </div>
+                                </div></a>
+                                <div class="cards swiper-slide">
+                                    <a href="products-detail.html"><div class="cards_desc">
+                                        <img src="./img/spec-offers.png" alt="">
+                                        <h4>Балансир</h4>
+                                        <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
+                                    </div></a>
+                                    <div class="cards_price">
+                                        <span>11 900,65 Р</span>
+                                        <p class="price">7 100,25 Р</p>
+                                        <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
+                                    </div>
+                                </div></a>
+                                <div class="cards swiper-slide">
+                                    <a href="products-detail.html"><div class="cards_desc">
+                                        <img src="./img/spec-offers.png" alt="">
+                                        <h4>Вентиль электропневматический</h4>
+                                        <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
+                                    </div></a>
+                                    <div class="cards_price">
+                                        <span>7 900,65 Р</span>
+                                        <p class="price">2 200,25 Р</p>
+                                        <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
+                                    </div>
+                                </div></a>
+                                <div class="cards swiper-slide">
+                                    <a href="products-detail.html"><div class="cards_desc">
+                                        <img src="./img/spec-offers.png" alt="">
+                                        <h4>Вентиль электропневматический</h4>
+                                        <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
+                                    </div></a>
+                                    <div class="cards_price">
+                                        <span>7 900,65 Р</span>
+                                        <p class="price">2 200,25 Р</p>
+                                        <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
+                                    </div>
                                 </div>
-                                <div class="cards_price">
-                                    <span>1 900,65 Р</span>
-                                    <p class="price">1 200,25 Р</p>
-                                    <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
-                                </div>
-                            </div>
-                            <div class="cards swiper-slide">
-                                <div class="cards_desc">
-                                    <img src="./img/spec-offers.png" alt="">
-                                    <h4>Цилиндр включения жалюзи</h4>
-                                    <p>ТГМ4.10.46.000 ТГМ4.10.46.000</p>
-                                </div>
-                                <div class="cards_price">
-                                    <span>7 900,65 Р</span>
-                                    <p class="price">2 200,25 Р</p>
-                                    <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
-                                </div>
-                            </div>
-                            <div class="cards swiper-slide">
-                                <div class="cards_desc">
-                                    <img src="./img/spec-offers.png" alt="">
-                                    <h4>Балансир</h4>
-                                    <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
-                                </div>
-                                <div class="cards_price">
-                                    <span>11 900,65 Р</span>
-                                    <p class="price">7 100,25 Р</p>
-                                    <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
-                                </div>
-                            </div>
-                            <div class="cards swiper-slide">
-                                <div class="cards_desc">
-                                    <img src="./img/spec-offers.png" alt="">
-                                    <h4>Вентиль электропневматический</h4>
-                                    <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
-                                </div>
-                                <div class="cards_price">
-                                    <span>7 900,65 Р</span>
-                                    <p class="price">2 200,25 Р</p>
-                                    <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
-                                </div>
-                            </div>
-                            <div class="cards swiper-slide">
-                                <div class="cards_desc">
-                                    <img src="./img/spec-offers.png" alt="">
-                                    <h4>Вентиль электропневматический</h4>
-                                    <p>6.36.30.020 6.36.30.020 (ТЭМ2.35.30.1001)</p>
-                                </div>
-                                <div class="cards_price">
-                                    <span>7 900,65 Р</span>
-                                    <p class="price">2 200,25 Р</p>
-                                    <a href="" class="buy_btn">Добавить в корзину <img src="./img/spec-offers-bask.svg" alt=""></a>
-                                </div>
-                            </div>                
                         </div>
                         <div class="pagination">
                             <div class="swiper-button-next">
