--- a/products.html
+++ b/products.html
@@ -73,9 +73,9 @@
                 <li class="menu_adaptive_li"><a href="products.html">Продукция</a></li>
                 <li class="menu_adaptive_li"><a href="uslugi.html">Услуги</a></li>
                 <li class="menu_adaptive_li"><a href="dostavka.html">Доставка</a></li>
-                <li class="menu_adaptive_li"><a href="">Производство</a></li>
+                <li class="menu_adaptive_li"><a href="proizvodstvo.html">Производство</a></li>
                 <li class="menu_adaptive_li"><a href="info.html">Информация</a></li>
-                <li class="menu_adaptive_li"><a href="">Контакты</a></li>
+                <li class="menu_adaptive_li"><a href="contacts.html">Контакты</a></li>
             </ul>
     </section>
     <!-- Выпадающее меню справа -->
@@ -100,13 +100,13 @@
                     <a href="dostavka.html" class="main_lev">ДОСТАВКА</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">ПРОИЗВОДСТВО</a>
+                    <a href="proizvodstvo.html" class="main_lev">ПРОИЗВОДСТВО</a>
                 </li>
                 <li class="menu_item">
                     <a href="info.html" class="main_lev">ИНФОРМАЦИЯ</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">КОНТАКТЫ</a>
+                    <a href="contacts.html" class="main_lev">КОНТАКТЫ</a>
                 </li>
             </ul>
     </nav>
@@ -161,11 +161,11 @@
                         <div class="card">
                             <div class="card_wrap">
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="./img/products/prod-1.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -173,11 +173,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="/img/products/prod-2.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -185,11 +185,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="/img/products/prod-3.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -197,11 +197,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="/img/products/prod-4.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -209,11 +209,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="./img/products/prod-1.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -221,11 +221,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="/img/products/prod-2.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -233,11 +233,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="/img/products/prod-3.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -245,11 +245,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="/img/products/prod-4.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -257,11 +257,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="./img/products/prod-1.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -269,11 +269,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="/img/products/prod-2.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -281,11 +281,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="/img/products/prod-3.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
@@ -293,11 +293,11 @@
                                     </div>
                                 </div>
                                 <div class="cards">
-                                    <div class="cards_desc">
+                                    <a href="products-detail.html"><div class="cards_desc">
                                         <img src="/img/products/prod-4.png" alt="">
                                         <h4>Втулка</h4>
                                         <p>(ТЭМ1.35.30.128-01) ТЭ3.14.1291 (ТЭМ1.35.30.129) ТЭМ1.35.30.128-01 (ТЭ3.14.1291, ТГМ3.35.30.109)</p>
-                                    </div>
+                                    </div></a>
                                     <div class="cards_price">
                                         <span>1 900,65 Р</span>
                                         <p class="price">1 200,25 Р</p>
