--- a/proizvodstvo.html
+++ b/proizvodstvo.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dostavka</title>
+    <title>Proizvodstvo</title>
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display?styles=98774,98777,98776,98772,98773,98775,98770,98771,98769" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/oswald-4?styles=21468" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style-contacts.css">
+    <link rel="stylesheet" href="css/style-proizvodstvo.css">
 </head>
 <body>
     <header class="header" id="header">
@@ -59,9 +59,9 @@
                 <li class="sidebar_li"><a href="products.html">ПРОДУКЦИЯ</a></li>
                 <li class="sidebar_li"><a href="uslugi.html">УСЛУГИ</a></li>
                 <li class="sidebar_li"><a href="dostavka.html">ДОСТАВКА</a></li>
-                <li class="sidebar_li"><a href="proizvodstvo.html">ПРОИЗВОДСТВО</a></li>
+                <li class="sidebar_li sidebar_li_act"><a href="proizvodstvo.html">ПРОИЗВОДСТВО</a></li>
                 <li class="sidebar_li"><a href="info.html">ИНФОРМАЦИЯ</a></li>
-                <li class="sidebar_li sidebar_li_act"><a href="contacts.html">КОНТАКТЫ</a></li>
+                <li class="sidebar_li"><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
             <a href="#header" class="arrow_up"><img src="./img/arrow-up.svg" alt=""></a>
         </div>
@@ -128,83 +128,53 @@
         <main class="main">
             <section class="intro">
                 <div class="intro_wrap">
-                    <div class="intro_desc">
-                        <div class="intro_nav">
-                            <a href="/"><img src="./img/dostavka/arrow-left-grey.png" alt="">Главная</a>
-                            <p>|</p>
-                            <a href="">Контакты</a>
-                        </div>
-                        <h2 class="intro_h2">Контакты</h2>
-                        <div class="left_side">
-                            <div class="left_top">
-                                <div class="left_cont">
-                                    <h3>Телефоны</h3>
-                                    <p>+7 (4832) 32-10-65</p>
-                                    <p>+7 (4832) 32-10-66</p>
-                                    <p>+7 (4832) 32-10-67</p>
-                                    <h3 class="dif_h3">Адрес</h3>
-                                    <p>Брянск, ул. 50 Армии, 1</p>
-                                    <h3 class="dif_h3">Соцсети</h3>
-                                    <a href=""><img src="./img/contacts/whatsapp.svg" alt=""></a>
-                                    <a href=""><img src="./img/contacts/telegram.svg" alt=""></a>
-                                </div>
-                                <div class="right_card">
-                                    <img src="./img/contacts/map.png" alt="">
-                                </div>
-                            </div>
-                            <div class="left_mid">
-                                <img src="./img/contacts/map-det.png" alt="">
-                            </div>
-                            <div class="left_bot">
-                                <img src="./img/contacts/house-1.png" alt="" class="img_house_1">
-                                <img src="./img/contacts/house-2.png" alt="" class="img_house_2">
-                            </div>
-                        </div>
+                    <div class="intro_nav">
+                        <a href="/"><img src="../img/dostavka/arrow-left-grey.png" alt="">Главная</a>
+                        <p>|</p>
+                        <a href="">Производство</a>
                     </div>
-                    <div class="line"></div>
-                    <div class="right_side">
-                        <div class="cont_det cont_det_sbt">
-                            <h3>Отдел сбыта</h3>
-                            <div>
-                                <span>Телефон:</span>
-                                <p>+7 (4832) 32-10-65 <br> (Доп. : 102; 107; 108; 111; 113)</p>
+                    <div class="service_wrap">
+                        <h1 class="intro_h2">Производство</h1>
+                        <div class="serv_card_wrap">
+                            <div class="pro_left">
+                                <p>Постоянно ведется разработка и освоение новой продукции. 
+                                    Пополняется станочный парк и закупается новое оборудование.</p>
+                                <p>Штат укомплектован высококвалифицированными сотрудниками, 
+                                    инженерно-техническими работниками, действует конструкторское бюро.</p>
+                                <p>На данный момент наша компания освоила выпуск более ста номенклатурных позиций.</p>
+                                <p>Наша организация имеет собственные производственные площади и мощность с 
+                                    необходимым оборудованием: <br>
+                                    - Участок механической обработки. <br>
+                                    - Участок термической обработки. <br>
+                                    - Сварочный участок. <br>
+                                    - Сборочный участок. <br>
+                                    - Испытательный участок. <br>
+                                    - Покрасочный участок.</p>
                             </div>
-                            <div>
-                                <span>Email: </span>
-                                <p>info.sbyt@32po.ru</p>
-                            </div>
-                        </div>
-                        <div class="cont_det cont_det_snab">
-                            <h3>Отдел снабжения</h3>
-                            <div>
-                                <span>Телефон:</span>
-                                <p>+7 (4832) 32-10-65 (Доп. : 110; 116)</p>
-                            </div>
-                            <div>
-                                <span>Email: </span>
-                                <p>info.snab@32po.ru</p>
-                            </div>
-                        </div>
-                        <div class="cont_det cont_det_log">
-                            <h3>Отдел логистики</h3>
-                            <div>
-                                <span>Телефон:</span>
-                                <p>+7 (4832) 32-10-65 (Доп. : 107)</p>
-                            </div>
-                            <div>
-                                <span>Email:</span>
-                                <p> info.log@32po.ru</p>
-                            </div>
-                        </div>
-                        <div class="cont_det cont_det_pro">
-                            <h3>Производство</h3>
-                            <div>
-                                <span>Телефон:</span>
-                                <p>+7 (4832) 32-10-65 (Доп. : 118)</p>
-                            </div>
-                            <div>
-                                <span>Email:</span>
-                                <p> info.log@32po.ru</p>
+                            <div class="pro_right">
+                                <div class="pro_right_mob">
+                                    <img src="./img/proizvodstvo/pro-img-1-ad.png" alt="">
+                                    <img src="./img/proizvodstvo/pro-img-2-ad.png" alt="">
+                                    <img src="./img/proizvodstvo/pro-img-3-ad.png" alt="">
+                                    <img src="./img/proizvodstvo/pro-img-4-ad.png" alt="">
+                                </div>
+                                <div class="pro_img">
+                                    <img src="./img/proizvodstvo/pro-img-1.png" alt="" class="img_des">
+                                    <img src="./img/proizvodstvo/pro-img-1-ad.png" alt="" class="img_mob">
+                                </div>
+                                <div class="pro_img">
+                                    <img src="./img/proizvodstvo/pro-img-2.png" alt="" class="img_des">
+                                    <img src="./img/proizvodstvo/pro-img-2-ad.png" alt="" class="img_mob">
+                                </div>
+                               
+                                <div class="pro_img">
+                                    <img src="./img/proizvodstvo/pro-img-3.png" alt="" class="img_des">
+                                    <img src="./img/proizvodstvo/pro-img-3-ad.png" alt="" class="img_mob">
+                                </div>
+                                <div class="pro_img">
+                                    <img src="./img/proizvodstvo/pro-img-4.png" alt="" class="img_des">
+                                    <img src="./img/proizvodstvo/pro-img-4-ad.png" alt="" class="img_mob">
+                                </div>
                             </div>
                         </div>
                     </div>
